hphp/test/slow/parser/php-reserved-name-int-2.php.expectf
Fatal error: Cannot use 'HH\Int' as class name as it is reserved in %s on line 4
